--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-loader": "^8.0.6",
     "bootstrap": "^4.4.1",
     "css-loader": "^3.4.1",
+    "file-loader": "^5.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
